--- a/index.html
+++ b/index.html
@@ -6,34 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="fullpage.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.12/fullpage.css"
+        integrity="sha512-c2/xySTiUmIa2PzQAnKZVYi2+aJmyaI6rweK5GCL1HbHx70/Zub0RhYPy5RFbJsStRo+HTForawyFBgBp6btJA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <div id="fullpage">
-        <div class="section">
+    <div id="fullPage">
+        <div class="section s1">
             <h1> Hello </h1>
         </div>
-        <div class="section">
+
+        <div class="section s2">
             <h1>About </h1>
         </div>
-        <div class="section">
+
+        <div class="section s3">
             <h1> My Projects </h1>
             <div class="slide"> Project 1 </div>
             <div class="slide"> Project 2 </div>
             <div class="slide"> Project 3 </div>
             <div class="slide"> Project 4 </div>
         </div>
-        <div class="section"></div>
-        <div class="section"></div>
+
+        <div class="section s4">
+            <h1> My Languages </h1>
+        </div>
+
+        <div class="section s5">
+            <h1> Contact Information </h1>
+        </div>
+
     </div>
 
-    <script type="text/javascript" src="fullpage.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.12/fullpage.min.js"
+        integrity="sha512-2N6afhHcaOPaBztibhzvEp9MBtXoG+6YQ5AkllMJKHrZKUUiHHmIc1bEafMDjG+LnTtSIYjaKdg2BdZqqZkkBQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        new fullpage('#fullPage', {
+            autoScrolling: true
+        })
+    </script>
 </body>
 
 </html>
