--- a/index.html
+++ b/index.html
@@ -15,27 +15,63 @@
 <body>
     <div id="fullPage">
         <div class="section s1">
-            <h1> Hello </h1>
+            <div>
+                <h1>
+                    Hello I'm
+                    <br />
+                    DeMarcus,
+                    <br />
+                    Full Stack Developer
+                </h1>
+            </div>
+
         </div>
 
         <div class="section s2">
-            <h1>About </h1>
+            <div>
+                <h1>About </h1>
+                <p>
+                    Full-stack software engineer with the ability to build a web presence from the ground up.
+                    Successfully completed the 420 hour course requirement for General Assembly’s Software Engineering
+                    Immersive Program, specializing in Full Stack Development. Attended a technical highschool and
+                    gained a year of experience in Java. An eager fast learning individual with a passion for working
+                    with code involving troubleshooting for resolution as well being able to identify and recognize
+                    opportunities to improve existing code.
+                </p>
+            </div>
+
         </div>
 
         <div class="section s3">
-            <h1> My Projects </h1>
-            <div class="slide"> Project 1 </div>
-            <div class="slide"> Project 2 </div>
-            <div class="slide"> Project 3 </div>
-            <div class="slide"> Project 4 </div>
+            <div>
+                <h1> My Projects </h1>
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
+            </div>
         </div>
 
         <div class="section s4">
-            <h1> My Languages </h1>
+            <div>
+                <h1> My Languages </h1>
+            </div>
+
         </div>
 
         <div class="section s5">
-            <h1> Contact Information </h1>
+            <div>
+                <h1> Contact Information </h1>
+                <br />
+                <form onsubmit="sendEmail()"; reset(); return false;>
+                    <input type="text" id="name" placeholder="Your Name" required>
+                    <input type="email" id="email" placeholder="Your Email" required>
+                    <input type="text" id="name" placeholder="Your Name" required>
+                    <textarea id="message" rows="4" placeholder="Message"></textarea>
+                    <button type="submit">Send</button>
+                </form>
+            </div>
         </div>
 
     </div>
@@ -47,6 +83,22 @@
         new fullpage('#fullPage', {
             autoScrolling: true
         })
+    </script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script>
+        function sendEmail() {
+            Email.send({
+                Host: "smtp.elasticemail.com",
+                Username: "username",
+                Password: "password",
+                To: 'them@website.com',
+                From: "you@isp.com",
+                Subject: "This is the subject",
+                Body: "And this is the body"
+            }).then(
+                message => alert(message)
+            );
+        }
     </script>
 </body>
 
