--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <form onsubmit="sendEmail()"; reset(); return false;>
                     <input type="text" id="name" placeholder="Your Name" required>
                     <input type="email" id="email" placeholder="Your Email" required>
-                    <input type="text" id="name" placeholder="Your Name" required>
+                    <input type="text" id="subject" placeholder="Subject" required>
                     <textarea id="message" rows="4" placeholder="Message"></textarea>
                     <button type="submit">Send</button>
                 </form>
@@ -88,15 +88,13 @@
     <script>
         function sendEmail() {
             Email.send({
-                Host: "smtp.elasticemail.com",
-                Username: "username",
-                Password: "password",
-                To: 'them@website.com',
-                From: "you@isp.com",
-                Subject: "This is the subject",
-                Body: "And this is the body"
+                SecureToken: "8e943c2f-fefe-487a-b28e-9dc7896ce821",
+                To: 'demarcus.m.brown@gmail.com',
+                From: document.getElementById("email".value),
+                Subject: document.getElementById("subject").value,
+                Body: document.getElementById("message").value
             }).then(
-                message => alert(message)
+                message => alert("Message Sent Succesfull")
             );
         }
     </script>
