--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div>
                 <h1> Contact Information </h1>
                 <br />
-                <form onsubmit="sendEmail()"; reset(); return false;>
+                <form onsubmit=sendEmail(); reset(); return false;>
                     <input type="text" id="name" placeholder="Your Name" required>
                     <input type="email" id="email" placeholder="Your Email" required>
                     <input type="text" id="subject" placeholder="Subject" required>
@@ -94,7 +94,7 @@
                 Subject: document.getElementById("subject").value,
                 Body: document.getElementById("message").value
             }).then(
-                message => alert("Message Sent Succesfull")
+                message => alert("Message Sent Succesfully")
             );
         }
     </script>
