--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                 <h1> My Projects </h1>
                 <div class="slide">
                     <h2>Genshin Character Sheet</h2>
+                    <br />
+                    <div class="links">
+                            <a href="https://github.com/demarcusmb/genshin-character-stats"><h2>GitHub</h2></a>
+                            <a href="https://genshin-puller.netlify.app/"><h2>App</h2></a>
+                    </div>
+                    <br />
                     <img src="/images/genshin.png" />
                     <br />
                     <p>
@@ -56,6 +62,12 @@
                 </div>
                 <div class="slide">
                     <h2>GameShop</h2>
+                    <br />
+                    <div class="links">
+                            <a href="https://github.com/demarcusmb/shop"><h2>GitHub</h2></a>
+                            <a href="https://gmeshop.herokuapp.com/"><h2>App</h2></a>
+                    </div>
+                    <br />
                     <img src="/images/shop.png">
                     <br />
                     <p>
@@ -64,6 +76,12 @@
                 </div>
                 <div class="slide">
                     <h2>VirtualMall</h2>
+                    <br />
+                    <div class="links">
+                            <a href="https://github.com/demarcusmb/Virtual-Mall-Frontend"><h2>GitHub</h2></a>
+                            <a href="https://virtualmallusa.netlify.app/"><h2>App</h2></a>
+                    </div>
+                    <br />
                     <img src="/images/vmall.png">
                     <br />
                     <p>
@@ -72,6 +90,12 @@
                 </div>
                 <div class="slide">
                     <h2>EmployeeDisplay</h2>
+                    <br />
+                    <div class="links">
+                            <a href="https://github.com/demarcusmb/employeedisplay"><h2>GitHub</h2></a>
+                            <a href="https://www.google.com/url?q=https://employeedisplay.herokuapp.com/&sa=D&source=docs&ust=1667414246364343&usg=AOvVaw0wC2Og1YLDpaTZcsnnZxoE"><h2>App</h2></a>
+                    </div>
+                    <br />
                     <img src="/images/employee.png">
                     <br />
                     <p>
@@ -115,8 +139,8 @@
     <script>
         function sendEmail() {
             Email.send({
-                SecureToken: "d7ae0bc2-1df4-4640-a14e-92968c4a7802",
-                To: 'demarcus.m.brown@gmail.com',
+                SecureToken: "0835dd21-85a9-4ba7-932e-447f4e3f68ed",
+                To: 'gamingacademy328@gmail.com',
                 From: document.getElementById("email").value,
                 Subject: document.getElementById("subject").value,
                 Body: document.getElementById("message").value
