--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
         integrity="sha512-c2/xySTiUmIa2PzQAnKZVYi2+aJmyaI6rweK5GCL1HbHx70/Zub0RhYPy5RFbJsStRo+HTForawyFBgBp6btJA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/main.css">
-    <script src="/js/script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+            (function () {
+                emailjs.init('yrmtlOg1ASMnoOxkK');
+            })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                // generate a five digit number for the contact_number variable
+                this.contact_number.value = Math.random() * 100000 | 0;
+                // these IDs from the previous steps
+                emailjs.sendForm('service_lafqgsd', 'contact_form', this)
+                    .then(function() {
+                        console.log('SUCCESS!');
+                    }, function(error) {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
 </head>
 
 <body>
@@ -140,10 +161,11 @@
             <div>
                 <h1> Contact Information </h1>
                 <br />
-                <form onsubmit="sendMail(); reset(); return false;">
-                    <input type=" text" id="full=Name" placeholder="Your Name" required>
-                    <input type="email" id="email_id" placeholder="Your Email" required>
-                    <textarea id="message" rows="4" placeholder="Message"></textarea>
+                <form id="contact-form"">
+                    <input type="hidden" name="contact_number">            
+                    <input type=" text" name="from_name" placeholder="Your Name" required>
+                    <input type="email" name="email_id" placeholder="Your Email" required>
+                    <textarea name="message" rows="4" placeholder="Message"></textarea>
                     <button type="submit">Send</button>
                 </form>
             </div>
@@ -157,12 +179,6 @@
     <script>
         new fullpage('#fullPage', {
         })
-    </script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script type="text/javascript">
-            (function () {
-                emailjs.init('yrmtlOg1ASMnoOxkK');
-            })();
     </script>
 
 
