--- a/index.html
+++ b/index.html
@@ -37,11 +37,22 @@
 <body>
     <div id="fullPage">
         <div class="section s1">
+            <div class="header">
+                DeMarcus Brown
+                <div class="nav">
+                    <ul class="nav_links">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
             <div>
                 <h1>
                     Hello I'm
                     <br />
-                    DeMarcus,
+                    DeMarcus Brown,
                     <br />
                     Full Stack Developer
                 </h1>
@@ -51,11 +62,11 @@
 
         <div class="section s2">
             <div>
-                <h1>About </h1>
+                <h1>About Me</h1>
                 <p>
                     Full-stack software engineer with the ability to build a web presence from the ground up.
                     Successfully completed the 420 hour course requirement for General Assembly’s Software Engineering
-                    Immersive Program, specializing in Full Stack Development. Attended a technical highschool and
+                    Immersive Program, specializing in Full Stack Development. Attended a technical high school and
                     gained a year of experience in Java. An eager fast learning individual with a passion for working
                     with code involving troubleshooting for resolution as well being able to identify and recognize
                     opportunities to improve existing code.
@@ -69,6 +80,7 @@
                 <h1> My Projects </h1>
                 <div class="slide">
                     <h2>Genshin Character Sheet</h2>
+                    <p>This app pulls from a third party api to display character information for characters in Genshin Impact</p>
                     <br />
                     <div class="links">
                         <a href="https://github.com/demarcusmb/genshin-character-stats">
@@ -78,16 +90,11 @@
                             <h2>App</h2>
                         </a>
                     </div>
-                    <br />
                     <img src="/images/genshin.png" />
-                    <br />
-                    <p>
-                        This app pulls from a third party api to display character information for characters in Genshin
-                        Impact
-                    </p>
                 </div>
                 <div class="slide">
                     <h2>GameShop</h2>
+                    <p>This app displays the games and merchandise within a MongoDB database</p>
                     <br />
                     <div class="links">
                         <a href="https://github.com/demarcusmb/shop">
@@ -97,15 +104,11 @@
                             <h2>App</h2>
                         </a>
                     </div>
-                    <br />
                     <img src="/images/shop.png">
-                    <br />
-                    <p>
-                        This app displays the games and merchandise within a MongoDB database
-                    </p>
                 </div>
                 <div class="slide">
                     <h2>VirtualMall</h2>
+                    <p>This app displays the stores and each product within the different stores</p>
                     <br />
                     <div class="links">
                         <a href="https://github.com/demarcusmb/Virtual-Mall-Frontend">
@@ -115,15 +118,11 @@
                             <h2>App</h2>
                         </a>
                     </div>
-                    <br />
                     <img src="/images/vmall.png">
-                    <br />
-                    <p>
-                        This app displays the stores and each product within the different stores
-                    </p>
                 </div>
                 <div class="slide">
                     <h2>EmployeeDisplay</h2>
+                    <p>This app displays the different employees and different coding languages that they know</p>
                     <br />
                     <div class="links">
                         <a href="https://github.com/demarcusmb/employeedisplay">
@@ -134,12 +133,7 @@
                             <h2>App</h2>
                         </a>
                     </div>
-                    <br />
                     <img src="/images/employee.png">
-                    <br />
-                    <p>
-                        This app displays the different employees and different coding languages that they know
-                    </p>
                 </div>
             </div>
         </div>
