--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <link rel="stylesheet" href="css/main.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
-            (function () {
-                emailjs.init('yrmtlOg1ASMnoOxkK');
-            })();
+        (function () {
+            emailjs.init('yrmtlOg1ASMnoOxkK');
+        })();
     </script>
     <script type="text/javascript">
-        window.onload = function() {
-            document.getElementById('contact-form').addEventListener('submit', function(event) {
+        window.onload = function () {
+            document.getElementById('contact-form').addEventListener('submit', function (event) {
                 event.preventDefault();
                 // generate a five digit number for the contact_number variable
                 this.contact_number.value = Math.random() * 100000 | 0;
                 // these IDs from the previous steps
                 emailjs.sendForm('service_lafqgsd', 'contact_form', this)
-                    .then(function() {
+                    .then(function () {
                         console.log('SUCCESS!');
-                    }, function(error) {
+                    }, function (error) {
                         console.log('FAILED...', error);
                     });
             });
@@ -35,19 +35,20 @@
 </head>
 
 <body>
+    
     <div id="fullPage">
-        <div class="section s1">
+
+        <div class="section s1" id="s1">
             <div class="header">
-                DeMarcus Brown
+                <div class="logo"><a href="/resume/resume.pdf" download="resume.pdf">Download Resume</a></div>
                 <div class="nav">
                     <ul class="nav_links">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><a href="https://www.linkedin.com/in/demarcus-brown-9090a3243/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                        <li><a href="https://github.com/demarcusmb" target="_blank" rel="noopener noreferrer">GitHub</a></li>
                     </ul>
                 </div>
             </div>
+
             <div>
                 <h1>
                     Hello I'm
@@ -60,7 +61,7 @@
 
         </div>
 
-        <div class="section s2">
+        <div class="section s2" id="s2">
             <div>
                 <h1>About Me</h1>
                 <p>
@@ -75,18 +76,19 @@
 
         </div>
 
-        <div class="section s3">
+        <div class="section s3" id="s3">
             <div>
                 <h1> My Projects </h1>
                 <div class="slide">
                     <h2>Genshin Character Sheet</h2>
-                    <p>This app pulls from a third party api to display character information for characters in Genshin Impact</p>
+                    <p>This app pulls from a third party api to display character information for characters in Genshin
+                        Impact</p>
                     <br />
                     <div class="links">
-                        <a href="https://github.com/demarcusmb/genshin-character-stats">
+                        <a href="https://github.com/demarcusmb/genshin-character-stats" target="_blank" rel="noopener noreferrer">
                             <h2>GitHub</h2>
                         </a>
-                        <a href="https://genshin-puller.netlify.app/">
+                        <a href="https://genshin-puller.netlify.app/" target="_blank" rel="noopener noreferrer">
                             <h2>App</h2>
                         </a>
                     </div>
@@ -97,10 +99,10 @@
                     <p>This app displays the games and merchandise within a MongoDB database</p>
                     <br />
                     <div class="links">
-                        <a href="https://github.com/demarcusmb/shop">
+                        <a href="https://github.com/demarcusmb/shop" target="_blank" rel="noopener noreferrer">
                             <h2>GitHub</h2>
                         </a>
-                        <a href="https://gmeshop.herokuapp.com/">
+                        <a href="https://gmeshop.herokuapp.com/" target="_blank" rel="noopener noreferrer">
                             <h2>App</h2>
                         </a>
                     </div>
@@ -111,10 +113,10 @@
                     <p>This app displays the stores and each product within the different stores</p>
                     <br />
                     <div class="links">
-                        <a href="https://github.com/demarcusmb/Virtual-Mall-Frontend">
+                        <a href="https://github.com/demarcusmb/Virtual-Mall-Frontend" target="_blank" rel="noopener noreferrer">
                             <h2>GitHub</h2>
                         </a>
-                        <a href="https://virtualmallusa.netlify.app/">
+                        <a href="https://virtualmallusa.netlify.app/" target="_blank" rel="noopener noreferrer">
                             <h2>App</h2>
                         </a>
                     </div>
@@ -125,11 +127,11 @@
                     <p>This app displays the different employees and different coding languages that they know</p>
                     <br />
                     <div class="links">
-                        <a href="https://github.com/demarcusmb/employeedisplay">
+                        <a href="https://github.com/demarcusmb/employeedisplay" target="_blank" rel="noopener noreferrer">
                             <h2>GitHub</h2>
                         </a>
                         <a
-                            href="https://www.google.com/url?q=https://employeedisplay.herokuapp.com/&sa=D&source=docs&ust=1667414246364343&usg=AOvVaw0wC2Og1YLDpaTZcsnnZxoE">
+                            href="https://www.google.com/url?q=https://employeedisplay.herokuapp.com/&sa=D&source=docs&ust=1667414246364343&usg=AOvVaw0wC2Og1YLDpaTZcsnnZxoE" target="_blank" rel="noopener noreferrer">
                             <h2>App</h2>
                         </a>
                     </div>
@@ -138,25 +140,32 @@
             </div>
         </div>
 
-        <div class="section s4">
+        <div class="section s4" id="s4">
             <div class="s4">
-                <h1> My Languages </h1>
+                <h1> My Skills </h1>
                 <div class="lang">
                     <img src="/images/java.webp">
                     <img src="/images/javascript.png">
                     <img src="/images/python.png">
+                    <img src="/images/react.png">
+                    <img src="/images/django.png">
+                    <img src="/images/mongo.webp">
+                    <img src="/images/html.png">
+                    <img src="/images/css.png">
+                    <img src="/images/nodejs.png">
+                    <img src="/images/jquery.png">
                 </div>
-                
+
             </div>
 
         </div>
 
-        <div class="section s5">
+        <div class="section s5" id="s5">
             <div>
                 <h1> Contact Information </h1>
                 <br />
                 <form id="contact-form"">
-                    <input type="hidden" name="contact_number">            
+                    <input type="hidden" name="contact_number">
                     <input type=" text" name="from_name" placeholder="Your Name" required>
                     <input type="email" name="email_id" placeholder="Your Email" required>
                     <textarea name="message" rows="4" placeholder="Message"></textarea>
